# notebooks

./: .gitignore  Flower-1-Intro-to-FL-PyTorch.ipynb  Flower-2-Strategies-in-FL-PyTorch.ipynb  Flower-3-Flower-on-AWS-with-Terraform.ipynb  Flower-4-Private-FL-with-Opcaus-and-Flower.ipynb  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
