[tool.poetry]
name = "avl-notebooks"
version = "0.1.0"
description = ""
authors = ["Taner Topal <taner@adap.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipykernel = "^6.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
