[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Daniel Beutel <daniel@adap.com>", "Maria Börner <maria@adap.com>", "Taner Topal <taner@adap.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipykernel = "^6.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
